Docs for query params for Entry and ShelfRecord
